--- a/design.css
+++ b/design.css
@@ -6,12 +6,13 @@ body{
     font-family: 'KoHo', sans-serif;
     overflow-x: hidden;
 
-    
+    min-width: 1262px;
     
 }
 html
 {
     scroll-behavior: smooth;
+    min-width: 1262px;
 }
 nav
 {
@@ -26,6 +27,7 @@ nav
     z-index: 5000;
     padding: 5px 0;
     border-radius: 5px;
+    flex-wrap: wrap;
 
 }
 nav .logo
@@ -122,6 +124,7 @@ animation: reveal 3000ms ease-in-out forwards 200ms,
    glow 2500ms linear infinite 2000ms;
    margin-bottom: 120px;
    margin-left: 50px;
+    width: 50%;
 }
 @keyframes reveal {
     80%{
@@ -161,23 +164,14 @@ animation: reveal 3000ms ease-in-out forwards 200ms,
 
     
 }
-hr{
-  
-  border-style: none;
-  border-top: dotted;
-  border-color: #c8c2bc;
-  border-width: 8px;
-  width: 5%;
 
-}
 #heading 
 {
     font-size: 4rem;
     z-index: 50;
     width: 100%;
-    
     position: relative;
-    font-family: 'Satisfy', cursive;S
+    font-family: 'Satisfy', cursive;
     margin-bottom: -6px;
     text-shadow: 4px 4px 10px #fefefe;
     
@@ -185,6 +179,7 @@ hr{
 }
 .intro #heading
 {
+    font-family: 'Niramit', sans-serif;
     text-shadow: none;
 }
 #subtitle
@@ -192,6 +187,7 @@ hr{
     font-size: 2rem;
     z-index: 50;
     position: relative;
+    color: aliceblue;
 }
 .intro .cover img:hover {
   
@@ -203,7 +199,7 @@ hr{
 {
 
     border-radius: 50%;
-    padding: 0 5%;;
+    padding: 0 5%;
     
 }
 
@@ -246,7 +242,7 @@ section::before
     width: 100vw;
     margin-top:5%; 
     align-items: center;
-    margin: 30px 0;
+        margin-top:5%; 
 }
 .special .container
 {
@@ -254,8 +250,10 @@ section::before
 }
 .special .container .card
 {
-     height: 300px;
-    width: 28%;
+    position: relative;
+    top:-50px;
+    height: 300px;
+    width: 30%;
     display: flex;
     background: pink;
     align-content: flex-end;
@@ -263,7 +261,7 @@ section::before
     box-shadow: 2px 2px 5px rgba(0,0,0,0.2);
     background: white;
     justify-content: flex-end;
-    transition: 0.3s;
+    transition: 0.5s;
     
 }
 .special .container .card .img
@@ -271,6 +269,10 @@ section::before
     height: 100%;
     z-index: 4;
     background: yellow;
+    position: relative;
+    top: 200px;
+    transition: 0.3s;
+    flex-shrink: 1;
     
 }
 .special .container .card .img img
@@ -284,13 +286,20 @@ section::before
 
   box-shadow: 5px 5px 10px rgba(0,0,0,0.2); 
     transform: scale(1.1);
+    transform: translateY(50px);
 
+}
+.special .container .card:hover .img
+{
+    transform: translateY(-200px);
 }
 .special .container .card .text
 {
     display: flex;
     flex-direction: column;
     padding: 5px 5px;
+        flex-shrink: 1;
+    max-height: 300px;
     
     
 }
@@ -341,7 +350,6 @@ section::before
   color: #e74c3c;
   line-height: 1.2em;
     padding: 10px 5px;
-    padding-bottom: 
     overflow: hidden;
 
 }
@@ -763,4 +771,66 @@ animation: reveal 3000ms ease-in-out forwards 200ms,
     object-fit: cover;
     width: 40%;
 }
+.fa-smile
+{
+    color: #fdca40; 
+    //transform: 0.5s ease-out;
+    //animation: animate1 2s linear infinite;
+}
+@keyframes animate1
+{
+    
+    0%{
+        transform: rotateZ(00deg);
+    }
+    50%
+    {
+        transform: rotateZ(180deg);
+    }
+    100%
+    {
+        transform: rotateZ(360deg);
+    }
+}
+.form .login-box h2:hover .fa-smile
+{
+    animation: animate1 1.5s linear ;
+}
+@media only screen and (max-width: 1270px) {
+ 
+    body
+    {
+        overflow-x: visible;
+        text-align: center;
+    }
+    .special .container
+    {
+        flex-direction: column;
+        margin: 70px 0;
+    }
+    .special .container .card
+    {
+        margin: 65px 0; 
+        width: 300px;
+        height: 305px;    }
+    .intro
+    {
+        margin-top: 50px
+    }
+    .intro .name
+    {
+        width: 100vw;
+        padding: 0 0;
+    }
+    .intro .cover
+    {
+        position: absolute;
+        width:100%;
+        opacity: 0.5;
+    }
+    .intro .cover .name
+    {
+        text-align: center;
+    }
 
+}
